<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home" >

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.xc.brainstore.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.xc.brainstore.view.detail.DetailProductFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail_product" >
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.xc.brainstore.view.favorites.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_detailFragment"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.xc.brainstore.view.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="com.xc.brainstore.view.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" >
        <action
            android:id="@+id/action_meFragment_to_editMeFragment"
            app:destination="@id/navigation_editMe" />
        <action
            android:id="@+id/action_meFragment_to_helpCenterFragment"
            app:destination="@id/navigation_helpCenter" />
    </fragment>

    <fragment
        android:id="@+id/navigation_editMe"
        android:name="com.xc.brainstore.view.me.editprofile.EditMeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_edit_me" />

    <fragment
        android:id="@+id/navigation_helpCenter"
        android:name="com.xc.brainstore.view.me.helpcenter.HelpCenterFragment"
        android:label="@string/title_help_center"
        tools:layout="@layout/fragment_help_center" />

</navigation>